# -idgenerator_rs

./: Cargo.toml
snowflake/: Cargo.toml  readme.md
snowflake/src/: lib.rs  snowflake.rs  timeextensions.rs
src/: main.rs
